// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FormBase component renders a test schema with the default theme 1`] = `
<div>
  <form
    class="jsx-792729378 "
    novalidate=""
  >
    <div
      class="jsx-3883368021"
    >
      <div
        class="sc-jRQBWg cDwDrH pg-grid-container"
        cols="10"
      >
        <div
          class="sc-gKclnd sc-iCfMLu YZhSi fQKovI pg-grid-row"
        >
          <div
            class="sc-furwcr sc-pVTFL XpgcI eqAbko pg-grid-col"
            width="100"
          >
            <fieldset
              class="jsx-4178779636"
            >
              <div
                class="jsx-3883368021"
              >
                <label
                  for="root_field"
                >
                  field
                </label>
                <div
                  class="sc-crHmcD bKATQK pg-input"
                >
                  <input
                    aria-label="field"
                    class="sc-bqiRlB hrAFNs pg-input-input"
                    id="root_field"
                    name="root_field-input"
                    placeholder=""
                    required=""
                    value="test"
                  />
                </div>
                <div
                  class="jsx-3883368021 error-div"
                />
              </div>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="jsx-3883368021 error-div"
      />
    </div>
  </form>
</div>
`;

exports[`The FormBase component renders a test schema with the readonly theme 1`] = `
<div>
  <form
    class="jsx-792729378 "
    novalidate=""
  >
    <div
      class="jsx-3883368021"
    >
      <div
        class="sc-jRQBWg cDwDrH pg-grid-container"
        cols="10"
      >
        <div
          class="sc-gKclnd sc-iCfMLu YZhSi fQKovI pg-grid-row"
        >
          <div
            class="sc-furwcr sc-pVTFL XpgcI eqAbko pg-grid-col"
            width="100"
          >
            <div
              class="jsx-3883368021"
            >
              <dt>
                field
              </dt>
              <dd>
                test
              </dd>
              <div
                class="jsx-3883368021 error-div"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-3883368021 error-div"
      />
    </div>
  </form>
</div>
`;
